Update: burger models, completed. Server.js updated to http. Views, name change to Minute-Burger

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EatMyBurger</title>
+    <title>Minute-Burger</title>
     <link rel="stylesheet" href="/assets/css/styles.css" type="text/css">
     <script src="/assets/js/burger.js"></script>
 </head>
