Update: Handlebars not working but completed the handlebartemplates

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,12 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minute-Burger</title>
+    {{!-- bootstrap link --}}
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+    {{!-- own stylesheet --}}
     <link rel="stylesheet" href="/assets/css/styles.css" type="text/css">
-    <script src="/assets/js/burger.js"></script>
+
 </head>
 
 <body>
     {{{body}}}
+    <script src="/assets/js/burger.js"></script>
 </body>
 
 </html>
