Update: somewhat working links

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -33,7 +33,7 @@
 <div class="row add-burger">
     <div class="col-md-12 card mx-auto text-center">
         <h3 class="card-title text-center">Add a burger you want to eat!</h3>
-        <form class="add-burger-form mx-auto">
+        <form id="add-burger-form" class="mx-auto">
 
             <div class="form-group">
                 {{!-- <label for="new-burger">Add a Burger:</label> --}}
