Bug Fix: Before when you delete devoured burgers it removes all instances, now it deletes it by id; Update: CSS styling added

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 {{!-- burger action row! --}}
-<div class="row">
-    <div class="col-md-6">
-        <div class="card">
+<div class="row c2">
+    <div class="col-md-6 c2">
+        <div class="card c2">
             {{!-- Burgers list--}}
             <h3 class="card-title text-center">Burgers to Eat!</h3>
             <ul class="to-eat card-body mx-auto">
@@ -13,8 +13,8 @@
             </ul>
         </div>
     </div>
-    <div class="col-md-6">
-        <div class="card">
+    <div class="col-md-6 c2">
+        <div class="card c2">
             {{!-- Devoured burgers --}}
             <h3 class="card-title text-center">Burgers Eaten!</h3>
             {{!-- Burgers ready to be deleted --}}
@@ -30,8 +30,8 @@
 </div>
 
 {{!-- add burger section --}}
-<div class="row add-burger">
-    <div class="col-md-12 card mx-auto text-center">
+<div class="row add-burger c2">
+    <div class="col-md-12 card mx-auto text-center c2">
         <h3 class="card-title text-center">Add a burger you want to eat!</h3>
         <form class="add-burger-form mx-auto">
 
