Update: Styling fixed ready for deployment

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,10 @@
 </head>
 
 <body>
-    <header class="jumbotron c2"> Francisco's Burger</header>
+    <div class="container c1">
+        <h1> Francisco's Burger</h1>
+    </div>
+
     {{{body}}}
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
