--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -6,18 +6,8 @@
 body{
   background-color: #18191A;
   /* will use this once I know how to add a dark mode toggle to regular mode. */
-  /* background-attachment: fixed; */
-  /* background-image: url("https://wallpaperaccess.com/full/449903.jpg");     */
-}
-
-/* navbar settings here */
-.bd-navbar {
-  background-color:  #242526;
-}
-
-.navbar-nav{
-  position: relative;
-  margin-left: 70% !important;
+  background-attachment: fixed;
+ 
 }
 
 div {
@@ -25,7 +15,9 @@ div {
 }
 /* c1 contains the main column */
 .c1{
-  margin-top: 45px;
+  background-color: #242526;
+  border-radius: 10px;
+  margin-top: 60px;
   transition: translate(50%, 50%);
 }
 /* c2 determins the values for the rows and columns  */
@@ -35,29 +27,26 @@ div {
   margin-bottom: 5px;
 }
 .c3{
-  background-color: #242526;
+  margin-top: 25px;
+  background-color: #2c2d2e;
   border-radius: 10px;
   margin-bottom: 100px;
 }
 
 /* own margin set for headers */
 h1{
-  margin-top: 10px;
+  margin-top: 50px;
+  
 }
 h4{
   margin-top: 10px;
-}
-/* hr for border separator */
-hr { display: block; 
-  overflow: hidden; 
-  border-style: inset;
-  border-width: 2px;
 }
 
 
 li {
     padding: 5px;
     margin: 5px;
+    border-radius: 10px;
     background: black;
   }
   
@@ -66,11 +55,13 @@ li {
   }
   
   .add-burger-form {
-    padding: 5px;
+    border-radius: 10px;
+    padding: 10px;
     margin: 5px;
-    background: aqua;
+    background: #393a3b;
   }
   
-  .form-group {
-    margin-bottom: 5px;
+  input {
+    color: black !important;
+    
   }
