--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,47 +1,51 @@
 {{!-- burger action row! --}}
-<div class="row c2">
-    <div class="col-md-6 c2">
-        <div class="card c2">
-            {{!-- Burgers list--}}
-            <h3 class="card-title text-center">Burgers to Eat!</h3>
-            <ul class="to-eat card-body mx-auto">
-                {{#each burgers}}
-                {{#unless devoured}}
-                {{> burgers/burger-block devoured=true}}
-                {{/unless}}
-                {{/each}}
-            </ul>
+<div class="container">
+    <div class="row c2">
+        <div class="col-md-6 c2">
+            <div class="card c3">
+                {{!-- Burgers list--}}
+                <h3 class="card-title text-center">Burgers to Eat!</h3>
+                <ul class="to-eat card-body mx-auto">
+                    {{#each burgers}}
+                    {{#unless devoured}}
+                    {{> burgers/burger-block devoured=true}}
+                    {{/unless}}
+                    {{/each}}
+                </ul>
+            </div>
         </div>
-    </div>
-    <div class="col-md-6 c2">
-        <div class="card c2">
-            {{!-- Devoured burgers --}}
-            <h3 class="card-title text-center">Burgers Eaten!</h3>
-            {{!-- Burgers ready to be deleted --}}
-            <ul class="eaten card-body mx-auto">
-                {{#each burgers}}
-                {{#if devoured}}
-                {{> burgers/burger-block devoured=false}}
-                {{/if}}
-                {{/each}}
-            </ul>
+        <div class="col-md-6 c2">
+            <div class="card c3">
+                {{!-- Devoured burgers --}}
+                <h3 class="card-title text-center">Burgers Eaten!</h3>
+                {{!-- Burgers ready to be deleted --}}
+                <ul class="eaten card-body mx-auto">
+                    {{#each burgers}}
+                    {{#if devoured}}
+                    {{> burgers/burger-block devoured=false}}
+                    {{/if}}
+                    {{/each}}
+                </ul>
+            </div>
         </div>
     </div>
 </div>
 
 {{!-- add burger section --}}
-<div class="row add-burger c2">
-    <div class="col-md-12 card mx-auto text-center c2">
-        <h3 class="card-title text-center">Add a burger you want to eat!</h3>
-        <form class="add-burger-form mx-auto">
+<div class="container">
+    <div class="row add-burger c2">
+        <div class="col-md-12 card mx-auto text-center c2">
+            <h3 class="card-title text-center">Add a burger you want to eat!</h3>
+            <form class="add-burger-form mx-auto">
 
-            <div class="form-group">
-                {{!-- <label for="new-burger">Add a Burger:</label> --}}
-                <input type="text" class="new-burger" name="burger_name">
-            </div>
+                <div class="form-group">
+                    {{!-- <label for="new-burger">Add a Burger:</label> --}}
+                    <input type="text" class="new-burger" name="burger_name">
+                </div>
 
-            {{!-- Submit button to send the new burger --}}
-            <button class="btn-secondary btn rounded" type="submit">Add Burger</button>
-        </form>
+                {{!-- Submit button to send the new burger --}}
+                <button class="btn-secondary btn rounded" type="submit">Add Burger</button>
+            </form>
+        </div>
     </div>
 </div>
