Fixing some headers

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,7 +15,7 @@
 
 <body>
     <div class="container c1">
-        <h1> Francisco's Burger</h1>
+        <h1 class="text-center"> Francisco's Burger</h1>
     </div>
 
     {{{body}}}
